test/cli/test/deny-pod-delete-validate-deny/deny-pod-delete-validate-deny.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-pod-delete-validate-deny
spec:
  background: false
  rules:
    - name: deny-pod-delete-validate-deny
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        failureAction: Enforce
        message: Pod cannot be deleted
        deny:
          conditions:
            any:
              - key: "{{request.operation}}"
                operator: Equals
                value: DELETE
