test/cli/test/deny-pod-delete-validate-deny/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-delete
spec:
  containers:
  - name: container1
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-create
spec:
  containers:
  - name: container2
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-update
spec:
  containers:
  - name: container3
    image: dummyimagename
